RESOLVED FIXED285461
ObjectAllocationSinking shouldn't produce Phis to the values it's about to phantom.
https://bugs.webkit.org/show_bug.cgi?id=285461
Summary ObjectAllocationSinking shouldn't produce Phis to the values it's about to ph...
Keith Miller
Reported 2025-01-06 13:03:49 PST
...
Attachments
Keith Miller
Comment 1 2025-01-06 13:03:51 PST
Keith Miller
Comment 2 2025-01-06 13:10:55 PST
EWS
Comment 3 2025-01-06 23:19:46 PST
Committed 288507@main (016bc646b9f3): <https://commits.webkit.org/288507@main> Reviewed commits have been landed. Closing PR #38592 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.