ObjectAllocationSinking shouldn't produce Phis to the values it's about to phantom. https://bugs.webkit.org/show_bug.cgi?id=285461 rdar://142276606

Reviewed by Yusuke Suzuki.

In https://commits.webkit.org/283558@main we removed the incorrect Phi omission for values materialized values
but for values that we're about to sink we shouldn't link those to a Phi as we'll crash in lowerDFGToB3.

This patch skips the Phi/Upsilon as long as what we're targeting is a sink candidate (they're locked in at this
point). An alternative fix would be to remove the Phi/Upsilons after we convert to a phantom but that seems slower.

* JSTests/stress/phantom-put-by-offset-to-self-over-control-flow.js: Added.
* Source/JavaScriptCore/dfg/DFGObjectAllocationSinkingPhase.cpp:
* Source/JavaScriptCore/dfg/DFGSSACalculator.h:
(JSC::DFG::SSACalculator::computePhis):

Canonical link: https://commits.webkit.org/288507@main