Source/JavaScriptCore/dfg/DFGObjectAllocationSinkingPhase.cpp
@@ -1913,6 +1913,12 @@ private:
                 if (m_heapAtHead[block].getAllocation(location.base()).isEscapedAllocation())
                     return nullptr;
 
+                // If we point to a single dead allocation, we will directly use its materialization since it would be invalid to
+                // create a Phi for a Phantom.
+                Node* identifier = m_heapAtHead[block].follow(location);
+                if (identifier && m_sinkCandidates.contains(identifier))
+                    return nullptr;
+
                 Node* phiNode = m_graph.addNode(SpecHeapTop, Phi, block->at(0)->origin.withInvalidExit());
                 phiNode->mergeFlags(NodeResultJS);
                 return phiNode;
